# VP8-VP9-conerter

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  RAILWAY_SETUP.md  README.md  WEB_UI_GUIDE.md  check-railway.sh  deploy.sh  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-dev.txt  requirements.txt  test_basic.py  test_batch.py  test_compress.py
examples/: alpha_channel.py  basic_usage.py  batch_processing.py  custom_presets.py
src/video_compressor/: compressor.py  utils.py
web/: .vercelignore  DEPLOY_NOW.md  app.py  launch.py  start_server.sh
web/api/: index.py
web/static/: script.js  style.css
web/templates/: index.html
web/video_compressor/: __init__.py  batch.py  exceptions.py  presets.py  progress.py
